fix margin of left panel separator to align with right panel separator

--- a/components/src/core/components/List/list.scss
+++ b/components/src/core/components/List/list.scss
@@ -12,9 +12,8 @@
     &.with-filters {
       margin-bottom: 0.25rem;
     }
-    &--separator {
+    :deep(.oxd-table-left-panel--separator) {
       margin-top: 0.9375rem;
-      width: 90%;
     }
   }
   .table-card-list-wrapper {
